[tool.poetry]
name = "beets-alpine-exec"
version = "0.10.0"
description = "Opinionated container for Beets Music Organizer"
authors = ["Rowan Gillson <devops@the.bald.engineer>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12.7"
beets = "2.2.0"
flask = "^3.1.0"
pillow = "^10.4.0"
pyacoustid = "^1.3.0"
pylast = "^5.3.0"
requests = "^2.32.3"
wheel = "^0.45.1"
unidecode = "^1.3.8"
colorama = "^0.4.6"

[tool.poetry.group.dev.dependencies]
pre-commit = "^4.0.1"
commitizen = "^4.1.0"

[tool.poetry.plugins]
[tool.poetry.plugins."poetry.application.plugin"]
export = "poetry_plugin_export.plugins:ExportApplicationPlugin"

[tool.commitizen]
name = "cz_conventional_commits"
version = "0.10.0"
tag_format = "v$version"
annotated_tag = "true"
version_files = [
  "pyproject.toml:version"
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
