[project]
name = "beets-alpine-exec"
version = "1.0.0"
description = "Batteries included Beets in Docker"
readme = "README.md"
authors = [
    { name = "Rowan Gillson", email = "devops@the.bald.engineer" }
]
license = "MIT"
requires-python = ">=3.13"
dependencies = [
    "beets>=2.5.1",
    "colorama>=0.4.6",
    "flask>=3.1.1",
    "pillow>=11.2.1",
    "pyacoustid>=1.3.0",
    "pylast>=6.0.0",
    "requests>=2.32.5",
    "unidecode>=1.4.0",
    "wheel>=0.45.1",
]

[dependency-groups]
dev = [
    "commitizen>=4.7.0",
    "pre-commit>=4.2.0",
]

[tool.commitizen]
name = "cz_conventional_commits"
version = "1.0.0"
tag_format = "v$version"
version_scheme = "semver"
version_provider = "uv"
annotated_tag = true
version_files = [
    "pyproject.toml:version",
]
